<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainWindow"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="40sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamAvatar"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_description"
        android:background="@drawable/ic_logo_00"
        android:onClick="onAvatarClick"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamNameText"
        android:minWidth="200dp"
        android:layout_below="@+id/teamAvatar"
        android:layout_centerHorizontal="true"
        android:hint="@string/team_name"
        android:layout_marginTop="20dp"
        android:singleLine="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamAddress"
        android:minWidth="200dp"
        android:layout_below="@+id/teamNameText"
        android:layout_centerHorizontal="true"
        android:hint="@string/address"
        android:layout_marginTop="20dp"
        android:singleLine="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mapButton"
        android:minWidth="200dp"
        android:layout_below="@+id/teamAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/map_button"
        android:onClick="onMapsClick"/>

</RelativeLayout>
