<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fletchto99.com.footballpal.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatar_selection"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:id="@+id/avatarTitle"
        android:layout_marginTop="40dp"/>

    <GridLayout
        android:id="@+id/avatarSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatarTitle"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ava1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:background="@drawable/ic_logo_01"
            android:contentDescription="@string/image_description"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:onClick="setAvatar" />

        <ImageView
            android:id="@+id/ava2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@drawable/ic_logo_02"
            android:contentDescription="@string/image_description"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:onClick="setAvatar" />

        <ImageView
            android:id="@+id/ava3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:background="@drawable/ic_logo_03"
            android:contentDescription="@string/image_description"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:onClick="setAvatar" />

        <ImageView
            android:id="@+id/ava4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@drawable/ic_logo_04"
            android:contentDescription="@string/image_description"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:onClick="setAvatar" />

        <ImageView
            android:id="@+id/ava5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:background="@drawable/ic_logo_05"
            android:contentDescription="@string/image_description"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:onClick="setAvatar" />

        <ImageView
            android:id="@+id/ava6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@drawable/ic_logo_00"
            android:contentDescription="@string/image_description"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:onClick="setAvatar" />

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatarSelection"
        android:layout_centerHorizontal="true"
        android:text="@string/from_phone"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
